test/compile_fail/std_does_not_export_json.cpp
import rstd;

auto main() -> int {
    auto value = rstd::json::Value::Null();
    return value.is_null() ? 0 : 1;
}
